# aipc-strix-halo

./: .gitignore  .sops.yaml  AGENTS.md  CLAUDE.md  Install-AIPC-Windows.ps1  LICENSE  README.md  install-aipc-linux.sh  package-lock.json
docs/: agent-log.md  architecture.md  core-status.md  disk-layer-hygiene.md  glm-handoff-2026-07-01.md  install-windows-direct-runbook.md  (+9 more)
modules/dev-ai-codexbar-gui/files/usr/lib/codexbar-gui/: codexbar-gui.desktop  config.yaml  pyproject.toml  run.sh  start.sh
modules/dev-ai-codexbar-gui/files/usr/lib/codexbar-gui/autostart/: codexbar-gui.desktop
modules/dev-ai-codexbar-gui/files/usr/lib/codexbar-gui/codexbar_gui/: __init__.py  __main__.py  config.py  config_dialog.py  cost.py  i18n.py  icon_updater.py  icons.py  main.py  menu_bar.py  oauth_login.py  popover.py  provider_model.py  server_launcher.py  styles.py  tray_app.py  upstream.py  usage_panel.py  webapp.py
modules/dev-ai-codexbar-usage/files/usr/lib/aipc-codexbar-usage/: pyproject.toml
modules/dev-ai-codexbar-usage/files/usr/lib/aipc-codexbar-usage/codexbar_usage/: __main__.py  config.py  cost.py  fetch.py  provider_aliases.py  tracker.py  ui.py
modules/dev-ai-codexbar-usage/files/usr/lib/aipc-codexbar-usage/codexbar_usage/providers/: copilot.py  openai.py  openai_codex.py  warp.py  windsurf.py  zai.py  zed.py
tools/: aipc_mem0_point_mcp_local.sh  bootstrap.sh  build-local.sh  make-usb-mac.sh  pyproject.toml
tools/aipc_lib/: ccs_sync.py  cli.py  codexbar_usage.py  config_menu.py  desktop_presets.py  doctor.py  gate_client.py  hermes_sync.py  log_append.py  mem0_local_mcp.py  mem0_migrate.py  model_presets.py  models.py  modules.py  opencode_sync.py  overlay_api.py  panel_mirror.py  portal.py  rag.py  render_ansible.py  render_bootc.py  screen_client.py  secrets.py  status_dashboard.py  storage_reclaim.py  tools_menu.py  tools_tui.py  voice_audio.py  voice_intents.py  voice_ops.py  voice_timing.py  voice_ux.py
tools/tests/: test_agent_memory_lanes.py  test_agent_tools_usage.py  test_ai_closed_loop.py  test_ai_sleep_resilience.py  test_ccs_sync.py  test_closed_loop_contract.py  test_compact_isolation_routing.py  test_config_menu.py  test_control_center.py  test_control_center_server.py  test_control_center_spa.py  test_desktop_presets.py  test_doctor_memory_rag.py  test_doctor_voice.py  test_gate_client.py  test_glm_cloud.py  test_hermes_sync.py  test_intent_classifier.py  test_lemonade_cli.py  test_log_append.py  test_long_tasks.py  test_mem0_cli.py  test_mem0_local_mcp.py  test_mem0_migrate.py  test_mem0_server_contract.py  test_model_presets.py  test_models.py  test_models_loaded_unload.py  test_modules.py  test_oneshot_prompt_task.py  test_opencode_sync.py  test_overlay_api.py  test_overlay_dock.py  test_overlay_markdown.py  test_panel_mirror.py  test_portal.py  test_portal_agents.py  test_portal_scheduling.py  test_portal_user_units.py  test_power_guard_charge_cap.py  (+29 more)
(+906 files in other folders)
