[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aipc"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "pyyaml>=6.0",
    "rich>=13.0",
    "textual>=0.60",
    "httpx>=0.24.0",
]

[project.scripts]
aipc = "aipc_lib.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["aipc_lib*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
