[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codexbar-gui"
version = "0.2.0"
description = "CodexBar system tray GUI for AI coding usage tracking"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.6",
]

[project.scripts]
codexbar-gui = "codexbar_gui.__main__:entry_point"

[tool.setuptools.packages.find]
where = ["."]
include = ["codexbar_gui*"]
