[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aipc-codexbar-usage"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "httpx>=0.25",
]

[project.optional-dependencies]
cost = ["httpx>=0.25"]

[project.scripts]
aipc-usage = "codexbar_usage.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["codexbar_usage*"]
